Fixed nav button alignment

--- a/src/components/Header/header.styles.module.css
+++ b/src/components/Header/header.styles.module.css
@@ -150,4 +150,8 @@
   .hambContainer {
     display: none;
   }
+
+  .button {
+    margin: 0;
+  }
 }
